--- a/chalice_utils/pytest.ini
+++ b/chalice_utils/pytest.ini
@@ -2,5 +2,5 @@
 norecursedirs = .git
 testpaths = ./tests
 pythonpaths = .
-addopts = --flake8 --cov=chalice_utils -vv
+addopts = --flake8 --cov=alfred -vv
 flake8-max-line-length = 88
