--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,9 @@ services:
   app:
     build:
       context: .
-      dockerfile: .
+      dockerfile: docker/app/Dockerfile
     volumes:
-      - .:/code/
+      - ./:/var/task
     environment: &environment
       - ALFRED_REDIS_HOST=redis
       - ALFRED_PASSWORD_SALT=esquilo
@@ -21,8 +21,6 @@ services:
       - "8108:8108"
     depends_on:
       - "redis"
-    # https://github.com/Eficode/wait-for
-    command: pytest -s --cov-report term-missing --cov-fail-under 100
 
 volumes:
   redis-data:
