--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 norecursedirs = .git
 testpaths = ./tests
-pythonpaths = .
+pythonpaths = . ./alfred
 addopts = --flake8 --cov=alfred -vv
 flake8-max-line-length = 88
