--- a/pytest.ini
+++ b/pytest.ini
@@ -2,5 +2,5 @@
 norecursedirs = .git
 testpaths = ./tests
 pythonpaths = . ./alfred
-addopts = --flake8 --cov=alfred -vv
+addopts = --flake8 --cov=alfred/ -vv
 flake8-max-line-length = 88
