Adicionando env SQS_QUEUE_URL e envs necessários os settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,16 +23,17 @@ services:
     volumes:
       - ./:/var/task
     environment: &environment
+      - ALFRED_PASSWORD_SALT=esquilo
+      - ALFRED_REDIS_HOST=redis
       - AWS_ACCESS_KEY_ID=aws_access_key
       - AWS_DEFAULT_REGION=us-east-1
       - AWS_SECRET_ACCESS_KEY=aws_access_secret
-      - ALFRED_REDIS_HOST=redis
-      - ALFRED_PASSWORD_SALT=esquilo
-      - PYNAMODB_CONFIG=/var/task/alfred/pynamodb_settings.py
+      - FERNET_CRYPT_KEY=ank2C0xNzXJn6rfdJ3nS5zMkClU0I34tuQMXpVmX6yM=
       - JWT_ALGORITHM=HS256
       - JWT_EXP_DELTA_SECONDS=604800
       - JWT_SECRET=fake_secret
-      - FERNET_CRYPT_KEY=ank2C0xNzXJn6rfdJ3nS5zMkClU0I34tuQMXpVmX6yM=
+      - PYNAMODB_CONFIG=/var/task/alfred/pynamodb_settings.py
+      - SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/292107540214/wallet-isa
     ports:
       - "8108:8108"
     depends_on:
