--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - JWT_EXP_DELTA_SECONDS=604800
       - JWT_SECRET=fake_secret
       - PYNAMODB_CONFIG=/var/task/alfred/pynamodb_settings.py
-      - SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/292107540214/wallet-isa
+      - SQS_QUEUE_URL=${SQS_QUEUE_URL}
     ports:
       - "8108:8108"
     depends_on:
