--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       - JWT_SECRET=fake_secret
       - PYNAMODB_CONFIG=/var/task/alfred/pynamodb_settings.py
       - SQS_QUEUE_URL=${SQS_QUEUE_URL}
-      - SENTRY_DSN=1234
+      - SENTRY_DSN=https://012ef51739634faba1b75114cf41b449@o396301.ingest.sentry.io/5257916
     ports:
       - "8108:8108"
     depends_on:
