--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,13 @@ services:
       - AWS_ACCESS_KEY_ID=aws_access_key
       - AWS_DEFAULT_REGION=us-east-1
       - AWS_SECRET_ACCESS_KEY=aws_access_secret
+      - BUCKET_S3=fake_bucket
+      - DYNAMO_PREFIX=alfred
       - FERNET_CRYPT_KEY=ank2C0xNzXJn6rfdJ3nS5zMkClU0I34tuQMXpVmX6yM=
       - JWT_ALGORITHM=HS256
       - JWT_EXP_DELTA_SECONDS=604800
       - JWT_SECRET=fake_secret
       - PYNAMODB_CONFIG=/var/task/alfred/pynamodb_settings.py
-      - BUCKET_S3=fake_bucket
     ports:
       - "8108:8108"
     depends_on:
