--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -1,10 +1,11 @@
-pip-tools==6.4.0
 black
+chalice==1.26.1
+cryptography==36.0.0
+marshmallow==3.14.1
+pip-tools==6.4.0
 pre-commit
-walrus
+pyjwt==2.3.0
+pynamodb
 sentry-sdk==1.3.1
 sqlalchemy==1.3.24
-chalice==1.26.1
-pynamodb
-pyjwt==2.3.0
-cryptography==36.0.0
+walrus
