--- a/tests/tools/cassettes/test_email_invalid_success.yaml
+++ b/tests/tools/cassettes/test_email_invalid_success.yaml
@@ -11,7 +11,7 @@ interactions:
       User-Agent:
       - python-requests/2.27.1
     method: GET
-    uri: https://apps.emaillistverify.com/api/verifyEmail?secret=fake_key&email=invalid.email@maistodos.com.br
+    uri: https://apps.emaillistverify.com/api/verifyEmail?email=invalid.email%40maistodos.com.br&secret=ANY_SECRET
   response:
     body:
       string: !!binary |
@@ -34,7 +34,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Wed, 09 Mar 2022 20:41:32 GMT
+      - Thu, 10 Mar 2022 19:42:30 GMT
       Expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       Pragma:
@@ -42,7 +42,7 @@ interactions:
       Server:
       - nginx
       Set-Cookie:
-      - emaillistverify=j7ka62cr17tpav381d6ajalild; path=/; secure; HttpOnly
+      - emaillistverify=aipp4eco8ojsmeh80cauk354mh; path=/; secure; HttpOnly
       Transfer-Encoding:
       - chunked
       Vary:
